--- a/Server/vercel.json
+++ b/Server/vercel.json
@@ -1,14 +1,19 @@
 {
+  "version": 2,
   "builds": [
     {
-      "src": "server.js",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/.*",
-      "dest": "server.js"
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "/images/$1"
     }
   ]
 }
